--- a/exp.css
+++ b/exp.css
@@ -856,6 +856,7 @@ a{
         height: 70px;
         width: 70px;
         left: 10px;
+         top: 10px;
     }
     .iicRight{
         height: 70px;
