--- a/exp.css
+++ b/exp.css
@@ -13,9 +13,12 @@
       animation-delay: calc(var(--scroll) * -1s);
       animation: scale-a-lil linear both;
       overflow-x: hidden;
-  }
+}
 
-
+.iicprev{
+    display: block;
+    top: 10vh;
+}
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -1372,7 +1375,15 @@ a{
     transform-origin: 4vw 16vh;
     box-shadow: -2vmin 0 0.37869171911220967vmin currentColor;
 }
-  
+.spantag{
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    font-family:monospace ;
+}
+.centered{
+    text-align: center;
+}
 h1 {
     font-size: 5em;
     font-weight: bold;
